# osquery

./: .gitmodules  CMakeLists.txt  buildspec.yml
.github/workflows/: build.yml  macos.yaml
cmake/: globals.cmake
libraries/cmake/source/augeas/: CMakeLists.txt
libraries/cmake/source/boost/: CMakeLists.txt
libraries/cmake/source/efivar/: CMakeLists.txt
libraries/cmake/source/efivar/patches/: uchar.h
libraries/cmake/source/lldpd/config/arm64/macos/libevent/: config.h
libraries/cmake/source/lldpd/config/arm64/macos/liblldpd/: config.h
libraries/cmake/source/modules/: Findefivar.cmake
libraries/cmake/source/rocksdb/version/: build_version.cc
libraries/cmake/source/smartmontools/config/arm64/macos/: config.h
osquery/include/osquery/: registry_factory.h
osquery/registry/: CMakeLists.txt  registry_factory.cpp  registry_interface.cpp
osquery/sql/: sqlite_string.cpp  virtual_table.cpp
osquery/tables/system/: CMakeLists.txt
osquery/tables/system/linux/: secureboot.cpp
osquery/tables/system/windows/: secureboot.cpp
specs/: CMakeLists.txt  usersnoi.table
specs/linwin/: efi_boot_order.table  uefi_boot_order.table
tools/codegen/templates/: amalgamation.cpp.in  default.cpp.in  foreign.cpp.in
